Fix the alignment of elements on account cancellation confirmation page

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -1232,3 +1232,6 @@ i {
     transform: rotate(360deg);
   }
 }
+#cancellation_message {
+  max-width: none;
+}
